objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Invoice_Timing__c</fullName>
        <inlineHelpText>Per Service – Price indicated on product
Per Agreement - $0 on individual visits, full amount billed on final service</inlineHelpText>
        <label>Invoice Timing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Service</fullName>
                </value>
                <value>
                    <fullName>Per Agreement</fullName>
                </value>
                <value>
                    <fullName>Prepaid PO</fullName>
                    <isActive>false</isActive>
                    <label>Prepaid PO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Org_ID__c</fullName>
        <formula>Account.SABA_LMS_Code__c</formula>
        <label>LMS Org ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <description>Please fill this out if the Opportunity has been Closed-Lost.</description>
        <inlineHelpText>Please fill this out if the Opportunity has been Closed-Lost.  It is required if the Opportunity had a potential for over $50,000.</inlineHelpText>
        <label>Loss Reason</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lunch__c</fullName>
        <inlineHelpText>Length of time of lunch and any other information</inlineHelpText>
        <label>Lunch</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <inlineHelpText>Choose method for materials</inlineHelpText>
        <label>Materials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase Materials - (see special Instructions below)</fullName>
                </value>
                <value>
                    <fullName>Customer Downloads Materials</fullName>
                </value>
                <value>
                    <fullName>Red Cross Provides Materials for In Class Use Only</fullName>
                </value>
                <value>
                    <fullName>Course Includes Materials</fullName>
                </value>
                <value>
                    <fullName>Customer Provides Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_of_Students__c</fullName>
        <label>Minimum # of Students</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Jurisdictional_Type__c</fullName>
        <inlineHelpText>FS Opportunities ONLY. Do not complete for AP/LTP</inlineHelpText>
        <label>Multi-Jurisdictional Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Multi_Jurisdictional__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single POC, Central Billing</fullName>
                </value>
                <value>
                    <fullName>Single POC, Local Billing</fullName>
                </value>
                <value>
                    <fullName>Local POC, Central Billing</fullName>
                </value>
                <value>
                    <fullName>Local POC, Local Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Jurisdictional__c</fullName>
        <inlineHelpText>FS Opportunities ONLY. Do not complete for AP/LTP</inlineHelpText>
        <label>Multi-Jurisdictional</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_year_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-year Agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_in_Class__c</fullName>
        <description>The number of students in the class.</description>
        <inlineHelpText>The number of students in the class.</inlineHelpText>
        <label>Number in Class</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <inlineHelpText>Site indicates same physical location, not individual pools</inlineHelpText>
        <label>Number of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_PhExt__c</fullName>
        <description>This field is used for Email Merge puposes only</description>
        <formula>Owner.Extension</formula>
        <label>Opportunity Owner PhExt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Result_Detail_1__c</fullName>
        <label>Opportunity Result Detail 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_Result__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Being Worked</fullName>
                </value>
                <value>
                    <fullName>Sent Proposal</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Closed Failed to Connect</fullName>
                </value>
                <value>
                    <fullName>ARC Community</fullName>
                </value>
                <value>
                    <fullName>ARC AP</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Date Availability</fullName>
                </value>
                <value>
                    <fullName>Local Rep</fullName>
                </value>
                <value>
                    <fullName>Not Interested - No Reason Given</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Buyer&apos;s Remorse</fullName>
                </value>
                <value>
                    <fullName>Instructor No Show</fullName>
                </value>
                <value>
                    <fullName>No Contact - Follow Up</fullName>
                </value>
                <value>
                    <fullName>Price - Bugdet</fullName>
                </value>
                <value>
                    <fullName>NAN</fullName>
                </value>
                <value>
                    <fullName>SD Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pricing Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Result_Detail_2__c</fullName>
        <label>Opportunity Result Detail 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_Result_Detail_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Called No Answer</fullName>
                </value>
                <value>
                    <fullName>Connect POC</fullName>
                </value>
                <value>
                    <fullName>Connect POC VM</fullName>
                </value>
                <value>
                    <fullName>Agreement Pending</fullName>
                </value>
                <value>
                    <fullName>Agreement to Sales Admin</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Group Size</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Shopping</fullName>
                </value>
                <value>
                    <fullName>Too High</fullName>
                </value>
                <value>
                    <fullName>Date Availability</fullName>
                </value>
                <value>
                    <fullName>Training Loaction</fullName>
                </value>
                <value>
                    <fullName>SD unable to reach customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Result__c</fullName>
        <label>Opportunity Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>No Sale</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Duplicate Opportunity</fullName>
                </value>
                <value>
                    <fullName>Agent Pipeline Lead</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Agreement__c</fullName>
        <label>Pricing Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Approval_Level__c</fullName>
        <inlineHelpText>Because of a discount given on a line item, this opportunity will need approval to be Closed-Won at this level.</inlineHelpText>
        <label>Pricing Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Approval Needed</fullName>
                    <default>true</default>
                    <label>No Approval Needed</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Director</fullName>
                </value>
                <value>
                    <fullName>Executive Director</fullName>
                </value>
                <value>
                    <fullName>MOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Approval_Status__c</fullName>
        <formula>IF(TEXT(Pricing_Approval_Level__c)=&quot;No Approval Needed&quot;,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
( 
IF(TEXT(Approval_Status__c)=&quot;Approved&quot;,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;)
)
)
)</formula>
        <label>Pricing Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <description>This is the product category the sales rep is &quot;leading&quot; the opportunity with.</description>
        <inlineHelpText>This is the product category the sales rep is &quot;leading&quot; the opportunity with.</inlineHelpText>
        <label>Primary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>Aquatics Learn to Swim</fullName>
                </value>
                <value>
                    <fullName>Aquatics Other</fullName>
                </value>
                <value>
                    <fullName>Babysitting</fullName>
                </value>
                <value>
                    <fullName>Basic Water Rescue</fullName>
                </value>
                <value>
                    <fullName>BLS</fullName>
                </value>
                <value>
                    <fullName>Continuing Education Units</fullName>
                </value>
                <value>
                    <fullName>Emergency Preparedness</fullName>
                </value>
                <value>
                    <fullName>EMR</fullName>
                </value>
                <value>
                    <fullName>First Aid</fullName>
                </value>
                <value>
                    <fullName>First Aid/CPR/AED Training</fullName>
                </value>
                <value>
                    <fullName>First Aid Emergency Drills</fullName>
                </value>
                <value>
                    <fullName>Lifeguarding</fullName>
                </value>
                <value>
                    <fullName>Lifeline</fullName>
                </value>
                <value>
                    <fullName>Nurse Assistant Training</fullName>
                </value>
                <value>
                    <fullName>OSHA</fullName>
                </value>
                <value>
                    <fullName>Ready Rating</fullName>
                </value>
                <value>
                    <fullName>Safety Training for Swim Coaches</fullName>
                </value>
                <value>
                    <fullName>Training Supplies</fullName>
                </value>
                <value>
                    <fullName>Water Safety Instructor</fullName>
                </value>
                <value>
                    <fullName>Water Safety Outreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Notes__c</fullName>
        <label>Processing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCC_User__c</fullName>
        <formula>IF(Owner.Profile.Id = &quot;00ed0000000IiEd&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCC User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Saba_Order__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Enter the Saba Order number</inlineHelpText>
        <label>Saba Order #</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduling_Notes__c</fullName>
        <label>Scheduling Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System field used for Data Migration.</description>
        <label>Source System</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <inlineHelpText>Enter any pertinent information or special instructions</inlineHelpText>
        <label>Special Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Previously &quot;Date of Class&quot;. Renamed.</description>
        <inlineHelpText>Start date of class</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:15 AM</fullName>
                </value>
                <value>
                    <fullName>08:30 AM</fullName>
                </value>
                <value>
                    <fullName>08:45 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:15 AM</fullName>
                </value>
                <value>
                    <fullName>09:30 AM</fullName>
                </value>
                <value>
                    <fullName>09:45 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:15 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:45 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:15 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>01:00 PM</fullName>
                </value>
                <value>
                    <fullName>01:15 PM</fullName>
                </value>
                <value>
                    <fullName>01:30 PM</fullName>
                </value>
                <value>
                    <fullName>01:45 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:15 PM</fullName>
                </value>
                <value>
                    <fullName>02:30 PM</fullName>
                </value>
                <value>
                    <fullName>02:45 PM</fullName>
                </value>
                <value>
                    <fullName>03:00 PM</fullName>
                </value>
                <value>
                    <fullName>03:15 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Contact_Cell_Phone__c</fullName>
        <formula>Training_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Contact Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Contact_Office_Phone__c</fullName>
        <formula>Training_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Contact Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Contact_Office_Title__c</fullName>
        <formula>Training_Contact__r.Title &amp; &quot; &quot; &amp;Training_Contact__r.FirstName &amp; &quot; &quot; &amp;  Training_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Contact Office Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the contact for training (if known)</inlineHelpText>
        <label>Training Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Contact_email__c</fullName>
        <formula>Training_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Events_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Records if Training Events have been created for Opportunity.</description>
        <label>Training Events Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <inlineHelpText>Enter specific Information about the location for the class</inlineHelpText>
        <label>Training Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Written_test__c</fullName>
        <inlineHelpText>Will there be a written test?</inlineHelpText>
        <label>Written Test?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>AED</fullName>
        <active>true</active>
        <businessProcess>AID Inc</businessProcess>
        <label>AED</label>
    </recordTypes>
    <recordTypes>
        <fullName>Aquatics_Examiner_Service</fullName>
        <active>true</active>
        <businessProcess>AID Inc</businessProcess>
        <label>AES</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <businessProcess>AID Inc</businessProcess>
        <description>Manage the Opportunity Contract Process</description>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Place Orders</businessProcess>
        <description>Place Standard Orders</description>
        <label>Order Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Sales Oppty Path</businessProcess>
        <description>Manage the Opportunity Sales Process</description>
        <label>Sales Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <businessProcess>AID Inc</businessProcess>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Approval_Required_Before_Closing_the_Opp</fullName>
        <active>true</active>
        <description>Approval Required before moving the Opportunity Stage  to Closed Won.</description>
        <errorConditionFormula>AND( 
$User.Id &lt;&gt; &quot;005d0000000TvOu&quot;, 
$User.Id &lt;&gt; &quot;005d0000000Tuxg&quot;, 
( 
NOT(ISPICKVAL( Approval_Status__c , &apos;Approved&apos;)) &amp;&amp; NOT(ISPICKVAL( Pricing_Approval_Level__c , &apos;No Approval Needed&apos;)) &amp;&amp; (ISPICKVAL( StageName , &apos;Closed Won&apos;)) 
) 
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Opportunity can not be closed until it gets Approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approved_Process_Deviations</fullName>
        <active>true</active>
        <description>This VR defines that only specific users are able to make changes on Approved Process Deviations field</description>
        <errorConditionFormula>AND( 
AND( 
ISCHANGED(Approved_Process_Deviations__c), 
OR( 
ISPICKVAL(Approved_Process_Deviations__c, &quot;Yes, select Contract Number above&quot;), 
ISPICKVAL(Approved_Process_Deviations__c, &quot;No&quot;))), 


AND( 
$User.Id != &quot;005d0000000TvQL&quot;, /*Marty Mullins*/ 
$User.Id != &quot;005d0000000TuyJ&quot;, /*Heather Weller*/ 
$User.Id != &quot;0050V000007MwJO&quot;, /*Debbie Merritt*/
$User.Id != &quot;005d0000001YGDE&quot;, /*Monisha Slater*/ 
$User.Id != &quot;005d0000000TvOu&quot; /*Dalia Dinkins*/ 
), 

$Setup.Validation_Rules__c.Bypass_Rules__c = False)</errorConditionFormula>
        <errorDisplayField>Approved_Process_Deviations__c</errorDisplayField>
        <errorMessage>You do not have permission to make this change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approved_for_Commision_Payment</fullName>
        <active>true</active>
        <description>Approved for Commision Payment permission on check box</description>
        <errorConditionFormula>OR(
AND(
ISNEW(), 
Approved_for_Commision_Payment__c = TRUE,
$User.Id != &quot;005d0000000TwTQ&quot;, /*Ellen Jones*/
$User.ProfileId != &quot;00ed0000000uehO&quot;, /*System Administrator*/
$User.ProfileId != &quot;00ed0000000IUPl&quot;, /*System Admin + Deploy*/
$Setup.Validation_Rules__c.Bypass_Rules__c = False),
AND(
ISCHANGED( Approved_for_Commision_Payment__c ),
$User.Id != &quot;005d0000000TwTQ&quot;, /*Ellen Jones*/
$User.ProfileId != &quot;00ed0000000uehO&quot;, /*System Administrator*/
$User.ProfileId != &quot;00ed0000000IUPl&quot;, /*System Admin + Deploy*/
$Setup.Validation_Rules__c.Bypass_Rules__c = False))</errorConditionFormula>
        <errorDisplayField>Approved_for_Commision_Payment__c</errorDisplayField>
        <errorMessage>You do not have permission to update &quot;Approved for Commission Payment&quot;. Please contact Ellen Jones if this field must be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Detail_rule</fullName>
        <active>true</active>
        <description>Can not save record if Closed Lost stage is selected without a value in the Closed Lost Details field</description>
        <errorConditionFormula>AND(

NOT($Setup.Validation_Rules__c.Bypass_Rules__c),

ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISBLANK( Closed_Lost_Details__c ))</errorConditionFormula>
        <errorDisplayField>Closed_Lost_Reason_New__c</errorDisplayField>
        <errorMessage>You must enter a Closed Lost Reason AND Closed Lost Details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Reason_rule</fullName>
        <active>true</active>
        <description>Can not save record if Closed Lost stage is selected without a value in the Closed Lost Reason field</description>
        <errorConditionFormula>AND(

NOT($Setup.Validation_Rules__c.Bypass_Rules__c),
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISpickval(Closed_Lost_Reason_New__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Closed_Lost_Reason_New__c</errorDisplayField>
        <errorMessage>Must choose &quot;Closed Lost Reason&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multi_Jurisdictional_Type</fullName>
        <active>true</active>
        <description>When Multi-Jurisdictional Drop-down is set to Yes, you must choose an option for Multi-Jurisdictional Type</description>
        <errorConditionFormula>AND 
( ISPICKVAL( Multi_Jurisdictional__c , &quot;Yes&quot;), 
NOT OR ( 
ISPICKVAL(Multi_Jurisdictional_Type__c, &quot;Single POC, Central Billing&quot;), 
ISPICKVAL(Multi_Jurisdictional_Type__c, &quot;Single POC, Local Billing&quot;), 
ISPICKVAL(Multi_Jurisdictional_Type__c, &quot;Local POC, Central Billing&quot;), 
ISPICKVAL(Multi_Jurisdictional_Type__c, &quot;Local POC, Local Billing&quot;) 
) 
)</errorConditionFormula>
        <errorMessage>When Multi-Jurisdictional Drop-down is set to Yes, you must choose an option for Multi-Jurisdictional Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_record_creation_On_Opportunities</fullName>
        <active>true</active>
        <description>Prevent from record creation for Account with PHSS Channel &apos;RCS Retail&apos; And &apos;RCS Distributor&apos;.</description>
        <errorConditionFormula>OR( 
INCLUDES(Account.PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(Account.PHSS_Channel__c, &quot;RCS Distributor&quot;))</errorConditionFormula>
        <errorMessage>You cannot create an Opportunity from a Red Cross Store Account. Create a New Account first.</errorMessage>
    </validationRules>
</CustomObject>